# dbraw

./: pyproject.toml
src/dbraw/: __init__.py  artistdata.py  base.py  bsutils.py  dataiobase.py  mediadata.py  storeData.py  utils.py
src/dbraw/old/: artistname.py  base.py
tests/: test_artistdata.py  test_datafileio.py  test_dataio.py  test_media.py  test_mediadata.py
