[tool.poetry]
name = "dbraw"
version = "0.1.0"
description = ""
authors = ["tgadf <tgadfort@gmail.com>"]
readme = "README.md"
packages = [{include = "dbraw", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
